bitfields/tests/compile_error_cases/errors/array_fields/array_field_zero_length.rs
use bitfields::bitfield;

#[bitfield(u8)]
pub struct Bitfield {
    a: [u8; 0],
}

fn main() {}

